# 96BoardsGPIO

./: .gitignore  AUTHORS  README  README.md  configure.ac
96BoardConfig/: create96BoardsConfig.c  makefile  pin-mappings.sh
Archive/: 96BoardsGPIO.pc.in  Makefile.am
Archive/Documentation/: 96Boards_GPIO_C_API.md  DCO1.1.txt
Archive/examples/: Makefile.am  blink.py
Archive/lib/: Makefile.am  gpio.c  gpio.h  gpio_96boards.py
Documentation/: 96Boards_GPIO_C_API.md
examples/: blink.c  blink.py  demo  demo.c  makefile
lib/: Makefile.am  __gpio.h  gpio.c  gpio.d  gpio.h  gpio_96boards.py  lib96BoardsGPIO.so.0.1  lib96BoardsGPIO.so.1  makefile  pin_mappings.sh
